# vid2av1

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
scripts/: ensure-ffmpeg.mts  stage-portable.mts  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  encoder_service.rs  error_protocol.rs  main.rs  model.rs  state.rs
src-tauri/src/convert/: cancellation.rs  ffmpeg_runner.rs  mod.rs  planning.rs
src-tauri/src/ffmpeg/: command.rs  encoders.rs  mod.rs  output.rs  path_resolution.rs  probe.rs  rate_control.rs
src-tauri/src/state/: cancellation.rs  encoder_cache.rs  process_registry.rs  termination.rs  types.rs
ui/: index.html  tsconfig.json
ui/src/: main.ts  styles.css
ui/src/app/: conversion-errors.ts  convert-app.ts  dom.ts  format.ts  progress-presenter.ts  queue-utils.ts  tauri-api.ts  types.ts  ui-state.ts
